update elasticsearch jvm options